--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Data Permission</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Data Permission</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
+
 <body>
-    <h1>Will you allow us to store your data?</h1>
+  <div class="container --bs-body-color">
+    <div class="container_main card text-center text-white bg-secondary mb-3 ">
+      <div class="card-header">
+        Permission for data processing
+      </div>
+      <div class="card-body">
+        <!-- <h1 class="text-center">Welcome</h1> -->
+        <h2 class="text-center card-title">Will you allow us to store your data?</h2>
         <form action="/process" method="post">
-        <input type="checkbox" id="grant" name="grant" value="grant">
-        <label for="grant">Grant</label><br>
-        <input type="checkbox" id="reject" name="reject" value="reject">
-        <label for="reject">Reject</label><br>
-        <input type="submit" value="Submit">
-    </form>
+          <div class="d-grid gap-2 col-6 mx-auto">
+            <button type="submit" id="grant" name="grant" value="grant" class="alert alert-success">
+              Accept
+            </button>
+            <button type="submit" id="reject" name="reject" value="reject" class="alert alert-danger">
+              Reject
+            </button>
+          </div>
+        </form>
+        <div class="card-footer text-muted"></div>
+      </div>
+    </div>
+  </div>
+  </div>
 </body>
+
 </html>
