--- a/templates/home.html
+++ b/templates/home.html
@@ -7,17 +7,23 @@
   <title>Data Permission</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <style>
+    body {background: rgb(0,0,0);
+          background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(133,184,245,1) 100%);}
+    .container_main {background-color: #5d728b;}
+  </style>
 </head>
 
 <body>
-  <div class="container --bs-body-color">
-    <div class="container_main card text-center text-white bg-secondary mb-3 ">
+  <div class="container">
+    <div class="container_main card text-center text-white mb-3 ">
       <div class="card-header">
         Permission for data processing
       </div>
-      <div class="card-body">
-        <!-- <h1 class="text-center">Welcome</h1> -->
-        <h2 class="text-center card-title">Will you allow us to store your data?</h2>
+      <div class="card-body">        
+        <h2 class="text-center card-title">By selecting "Accept," you agree to allow us to store and process your IP address and other relevant data to enhance your participation with our service. Your data will be handled in accordance with the General Data Protection Regulation (GDPR) to ensure privacy and security. Note that data can be shared with third parties in order to improve your browsing experience.</h2>
+        <br>
+        <br>
         <form action="/process" method="post">
           <div class="d-grid gap-2 col-6 mx-auto">
             <button type="submit" id="grant" name="grant" value="grant" class="alert alert-success">
