--- a/templates/granted_permission.html
+++ b/templates/granted_permission.html
@@ -1,65 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <style>
+      body {
+        background: rgb(0, 0, 0);
+        background: linear-gradient(
+          90deg,
+          rgba(0, 0, 0, 1) 0%,
+          rgba(133, 184, 245, 1) 100%
+        );
+      }
+      .list-group {
+        color: white;
+      }
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Granted Permission</title>
-</head>
-<body>
-    <h1>Granted Permission Page</h1>
-    <p>You have granted permission to store your data.</p>
-    <br>
-    <div id="data-list"></div>
-    <br>
-    <a href="/erase_data">Erase Data</a>
-    <script>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="display-4 text-white">Granted Permission Page</h1>
+      <p class="lead text-white">
+        You have granted permission to store your data.
+      </p>
+      <br />
+      <div id="data-list"></div>
+      <br />
+      <a href="/erase_data" class="btn btn-danger">Erase Data</a>
+      <script>
         function getData() {
-            $.get('/get_data', function (data) {
-                $('#data-list').empty();
-                if (data.permission_data.length > 0) {
-                    $('#data-list').append('<h2>Permission Data</h2>');
-                    data.permission_data.forEach(function (permission) {
-                        $('#data-list').append('<p>ID: ' + permission.ID + '</p>');
-                        $('#data-list').append('<p>IP: ' + permission.IP + '</p>');
-                        $('#data-list').append('<p>Date and Time: ' + permission.datetime + '</p>');
-                        $('#data-list').append('<p>Description: ' + permission.description + '</p>');
-                        $('#data-list').append('<hr>');
-                    });
-                    $('#form-container').hide();
-                }
-            });
+          $.get("/get_data", function (data) {
+            $("#data-list").empty();
+            if (data.permission_data.length > 0) {
+              $("#data-list").append(
+                '<h2 class="mt-5 mb-3 text-white">Permission Data</h2><ul>'
+              );
+              data.permission_data.forEach(function (permission) {
+                $("#data-list").append(
+                  '<li class="text-white">ID: ' + permission.ID + "</li>"
+                );
+                $("#data-list").append(
+                  '<li class="text-white">IP: ' + permission.IP + "</li>"
+                );
+                $("#data-list").append(
+                  '<li class="text-white">Date and Time: ' +
+                    permission.datetime +
+                    "</li>"
+                );
+                $("#data-list").append(
+                  '<li class="text-white">Description: ' +
+                    permission.description +
+                    "</li></ul>"
+                );
+                $("#data-list").append("<hr>");
+              });
+              $("#form-container").hide();
+            }
+          });
         }
         $(document).ready(function () {
-            getData();
-            $('#data-form').submit(function (event) {
-                event.preventDefault();
-                $.ajax({
-                    type: 'POST',
-                    url: '/process',
-                    data: $(this).serialize(),
-                    success: function (response) {
-                        $('#message').text(response.message);
-                        $('#form-container').hide();
-                        $('#message').show();
-                        getData();
-                    },
-                    error: function (error) {
-                        console.log(error);
-                    }
-                });
+          getData();
+          $("#data-form").submit(function (event) {
+            event.preventDefault();
+            $.ajax({
+              type: "POST",
+              url: "/process",
+              data: $(this).serialize(),
+              success: function (response) {
+                $("#message").text(response.message);
+                $("#form-container").hide();
+                $("#message").show();
+                getData();
+              },
+              error: function (error) {
+                console.log(error);
+              },
             });
+          });
 
-            $('#erase-data').click(function (event) {
-                event.preventDefault();
-                $.get('/erase_data', function (response) {
-                    $('#form-container').show();
-                    $('#message').hide();
-                    $('#data-list').empty();
-                });
+          $("#erase-data").click(function (event) {
+            event.preventDefault();
+            $.get("/erase_data", function (response) {
+              $("#form-container").show();
+              $("#message").hide();
+              $("#data-list").empty();
             });
+          });
         });
-    </script>
-</body>
-</html>
+      </script>
+    </div>
+  </body>
 </html>
