--- a/templates/granted_permission.html
+++ b/templates/granted_permission.html
@@ -18,17 +18,18 @@
           rgba(133, 184, 245, 1) 100%
         );
       }
-      .list-group {
+      p {
         color: white;
       }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Granted Permission</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   </head>
   <body>
     <div class="container">
-      <h1 class="display-4 text-white">Granted Permission Page</h1>
-      <p class="lead text-white">
+      <h1 class="text-white">Granted Permission Page</h1>
+      <p class="text-white">
         You have granted permission to store your data.
       </p>
       <br />
@@ -37,65 +38,51 @@
       <a href="/erase_data" class="btn btn-danger">Erase Data</a>
       <script>
         function getData() {
-          $.get("/get_data", function (data) {
-            $("#data-list").empty();
-            if (data.permission_data.length > 0) {
-              $("#data-list").append(
-                '<h2 class="mt-5 mb-3 text-white">Permission Data</h2><ul>'
-              );
-              data.permission_data.forEach(function (permission) {
-                $("#data-list").append(
-                  '<li class="text-white">ID: ' + permission.ID + "</li>"
-                );
-                $("#data-list").append(
-                  '<li class="text-white">IP: ' + permission.IP + "</li>"
-                );
-                $("#data-list").append(
-                  '<li class="text-white">Date and Time: ' +
-                    permission.datetime +
-                    "</li>"
-                );
-                $("#data-list").append(
-                  '<li class="text-white">Description: ' +
-                    permission.description +
-                    "</li></ul>"
-                );
-                $("#data-list").append("<hr>");
-              });
-              $("#form-container").hide();
-            }
-          });
+            $.get('/get_data', function (data) {
+                $('#data-list').empty();
+                if (data.permission_data.length > 0) {
+                    $('#data-list').append('<h2 class="text-white">Permission Data</h2>');
+                    data.permission_data.forEach(function (permission) {
+                        $('#data-list').append('<p>ID: ' + permission.ID + '</p>');
+                        $('#data-list').append('<p>IP: ' + permission.IP + '</p>');
+                        $('#data-list').append('<p>Date and Time: ' + permission.datetime + '</p>');
+                        $('#data-list').append('<p>Description: ' + permission.description + '</p>');
+                        // $('#data-list').append('<hr>');
+                    });
+                    $('#form-container').hide();
+                }
+            });
         }
         $(document).ready(function () {
-          getData();
-          $("#data-form").submit(function (event) {
-            event.preventDefault();
-            $.ajax({
-              type: "POST",
-              url: "/process",
-              data: $(this).serialize(),
-              success: function (response) {
-                $("#message").text(response.message);
-                $("#form-container").hide();
-                $("#message").show();
-                getData();
-              },
-              error: function (error) {
-                console.log(error);
-              },
+            getData();
+            $('#data-form').submit(function (event) {
+                event.preventDefault();
+                $.ajax({
+                    type: 'POST',
+                    url: '/process',
+                    data: $(this).serialize(),
+                    success: function (response) {
+                        $('#message').text(response.message);
+                        $('#form-container').hide();
+                        $('#message').show();
+                        getData();
+                    },
+                    error: function (error) {
+                        console.log(error);
+                    }
+                });
             });
-          });
 
-          $("#erase-data").click(function (event) {
-            event.preventDefault();
-            $.get("/erase_data", function (response) {
-              $("#form-container").show();
-              $("#message").hide();
-              $("#data-list").empty();
+            $('#erase-data').click(function (event) {
+                event.preventDefault();
+                $.get('/erase_data', function (response) {
+                    $('#form-container').show();
+                    $('#message').hide();
+                    $('#data-list').empty();
+                });
             });
-          });
         });
-      </script>
+    </script>
     </div>
   </body>
 </html>
