--- a/templates/rejected_permission.html
+++ b/templates/rejected_permission.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +18,7 @@
           rgba(133, 184, 245, 1) 100%
         );
       }
-      .list-group {
+      p {
         color: white;
       }
     </style>
@@ -28,10 +27,8 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="display-4 text-white">Rejected Permission Page</h1>
-      <p class="lead text-white">
-        You have rejected permission to store your data.
-      </p>
+      <h1 class="text-white">Rejected Permission Page</h1>
+      <p class="text-white">You have rejected permission to store your data.</p>
       <div id="data-list"></div>
       <br />
       <a href="/erase_data" class="btn btn-danger">Erase Data</a>
@@ -42,26 +39,18 @@
 
             if (data.rejection_data.length > 0) {
               $("#data-list").append(
-                '<h2 class="text-white">Rejection Details:</h2><ul>'
+                '<h2 class="text-white">Rejection Details:</h2>'
               );
               data.rejection_data.forEach(function (rejection) {
                 $("#data-list").append(
-                  '<li class="text-white">Date and Time: ' +
-                    rejection.datetime +
-                    "</li>"
+                  "<p>Date and Time: " + rejection.datetime + "</p>"
                 );
                 $("#data-list").append(
-                  '<li class="text-white">Hash: ' +
-                    rejection.hashed_ip +
-                    "</li>"
+                  "<p>Hashed ip: " + rejection.hashed_ip + "</p>"
                 );
+                $("#data-list").append("<p>ID: " + rejection.ID + "</p>");
                 $("#data-list").append(
-                  '<li class="text-white">ID: ' + rejection.ID + "</li>"
-                );
-                $("#data-list").append(
-                  '<li class="text-white">Description: ' +
-                    rejection.description +
-                    "</li>"
+                  "<p>Description: " + rejection.description + "</p>"
                 );
                 $("#data-list").append("<hr>");
               });
