--- a/templates/rejected_permission.html
+++ b/templates/rejected_permission.html
@@ -24,6 +24,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Rejected Permission</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon.ico') }}">
   </head>
   <body>
     <div class="container">
