--- a/test/templates/rejected_permission.html
+++ b/test/templates/rejected_permission.html
@@ -9,6 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon.ico') }}">
     <style>
       body {
         background: rgb(0, 0, 0);
