--- a/templates/granted_permission.html
+++ b/templates/granted_permission.html
@@ -24,7 +24,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Granted Permission</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon.ico') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
   </head>
   <body>
     <div class="container">
